Footer fix and conference details removal from misc

--- a/alumni.html
+++ b/alumni.html
@@ -98,7 +98,7 @@
 				<li><a href="openings.html">Openings</a></li>
 				<div class="nav_border"></div>
 				<!-- Please add the external blog link here -->
-				<li><a href="#" target="_blank">Blog</a></li> 
+				<li><a href="#" target="_blank">Blog</a></li>
 				<div class="nav_border"></div>
 				<li><a href="contact.html">Contact</a></li>
 			</ul>
@@ -146,7 +146,8 @@
 					<li>Himika Das, Master in Applied Mathematics student at Indian Institute of Science Education and
 						Research (IISER), Tirupati, India. [Period: May-August, 2022].</li>
 
-					<li><a href="https://www.linkedin.com/in/adil/">Adil Bin Bhutto</a>, B.Tech. in Computer Science and Engineering final year student at Tezpur
+					<li><a href="https://www.linkedin.com/in/adil/">Adil Bin Bhutto</a>, B.Tech. in Computer Science and
+						Engineering final year student at Tezpur
 						University
 						(a Central University), India. [Period: February 2021 - April 2022].</li>
 				</ol>
@@ -274,21 +275,21 @@
 				<li><a href="openings.html">Openings</a></li>
 				<div class="nav_border"></div>
 				<!-- Please add the external blog link here -->
-				<li><a href="#" target="_blank">Blog</a></li> 
+				<li><a href="#" target="_blank">Blog</a></li>
 				<div class="nav_border"></div>
 				<li><a href="contact.html">Contact</a></li>
 			</ul>
 		</div>
-			<div id="footer">
-				<div>&copy; 2023 Monowar Bhuyan </div>
-				<div>Designed by <a href="https://www.linkedin.com/in/joud/" target="_blank">Joud Al Mualem</a></div>
-				<div class="quotes">
-					<div>“Failure is success in progress” ― Albert Einstein</div>
-					<br>
-					<div>“If four things are followed - having a great aim, acquiring knowledge, hard work, and
-						perseverance - then anything can be achieved” ― APJ Abdul Kalam</div>
-				</div>
+		<div id="footer">
+			<div class="quotes">
+				<div>“Failure is success in progress” ― Albert Einstein</div>
+				<br>
+				<div>“If four things are followed - having a great aim, acquiring knowledge, hard work, and
+					perseverance - then anything can be achieved” ― APJ Abdul Kalam</div>
 			</div>
+			<div>&copy; 2023 Monowar Bhuyan </div>
+			<div>Designed by <a href="https://www.linkedin.com/in/joud/" target="_blank">Joud Al Mualem</a></div><br>
+		</div>
 
 	</div>
 
