--- a/group.html
+++ b/group.html
@@ -98,7 +98,7 @@
 				<li><a href="openings.html">Openings</a></li>
 				<div class="nav_border"></div>
 				<!-- Please add the external blog link here -->
-				<li><a href="#" target="_blank">Blog</a></li> 
+				<li><a href="#" target="_blank">Blog</a></li>
 				<div class="nav_border"></div>
 				<li><a href="contact.html">Contact</a></li>
 			</ul>
@@ -107,33 +107,38 @@
 		<div class="contents">
 			<h3 class="content_separation">Cyber Analytics and Learning Group [ADSlab]<br></h3>
 			<div class="profile_sections">
-			Welcome to this Group of <a href="http://cloudresearch.org/" target="_blank">Autonomous Distributed Systems
-				Lab</a>, addressing the security-aware machine learning and optimization for AI-enabled distributed
-			systems to adapt with the risk that operates in complex and real-world environments.
-			<br>
-			<br>
-			The mission of this dimension is to advance the state-of-the-art of distributed machine learning, anomaly
-			detection, machine learning perspective optimization, systems security, distributed computing for
-			software-defined infrastructures. Currently, we are interested in the following five different problem
-			areas.
-			<br><br>
-			<ul>
-				<li>Machine learning</li>
-				<li>Anomaly detection</li>
-				<li>Systems Security</li>
-				<li>Trustworthy AI</li>
-				<li>Machine learning perspective optimization</li>
-			</ul>
-			<br>
-			Currently, this part of lab consists of eight Ph.D. students and one postdoc, and we are always looking for
-			new excellent applicants. We welcome master’s and undergraduate students to join our group. If you are at
-			UmU, drop me a line to set up a meeting. If not at UmU, look at our openings and opportunities as
-			intern/vistor.
-			<br><br>
-			<p>ADS Lab is led by <a href="https://www8.cs.umu.se/~elmroth/" target="_blank">Professor Erik Elmroth</a>
-				where I am one of the research leaders. For any inquires, email at <a href="mailto: monowar@cs.umu.se"
-					target="_top">monowar@cs.umu.se</a></p>
-			<br><br>
+				Welcome to this Group of <a href="http://cloudresearch.org/" target="_blank">Autonomous Distributed
+					Systems
+					Lab</a>, addressing the security-aware machine learning and optimization for AI-enabled distributed
+				systems to adapt with the risk that operates in complex and real-world environments.
+				<br>
+				<br>
+				The mission of this dimension is to advance the state-of-the-art of distributed machine learning,
+				anomaly
+				detection, machine learning perspective optimization, systems security, distributed computing for
+				software-defined infrastructures. Currently, we are interested in the following five different problem
+				areas.
+				<br><br>
+				<ul>
+					<li>Machine learning</li>
+					<li>Anomaly detection</li>
+					<li>Systems Security</li>
+					<li>Trustworthy AI</li>
+					<li>Machine learning perspective optimization</li>
+				</ul>
+				<br>
+				Currently, this part of lab consists of eight Ph.D. students and one postdoc, and we are always looking
+				for
+				new excellent applicants. We welcome master’s and undergraduate students to join our group. If you are
+				at
+				UmU, drop me a line to set up a meeting. If not at UmU, look at our openings and opportunities as
+				intern/vistor.
+				<br><br>
+				<p>ADS Lab is led by <a href="https://www8.cs.umu.se/~elmroth/" target="_blank">Professor Erik
+						Elmroth</a>
+					where I am one of the research leaders. For any inquires, email at <a
+						href="mailto: monowar@cs.umu.se" target="_top">monowar@cs.umu.se</a></p>
+				<br><br>
 			</div>
 		</div>
 
@@ -155,21 +160,21 @@
 				<li><a href="openings.html">Openings</a></li>
 				<div class="nav_border"></div>
 				<!-- Please add the external blog link here -->
-				<li><a href="#" target="_blank">Blog</a></li> 
+				<li><a href="#" target="_blank">Blog</a></li>
 				<div class="nav_border"></div>
 				<li><a href="contact.html">Contact</a></li>
 			</ul>
 		</div>
-			<div id="footer">
-				<div>&copy; 2023 Monowar Bhuyan </div>
-				<div>Designed by <a href="https://www.linkedin.com/in/joud/" target="_blank">Joud Al Mualem</a></div>
-				<div class="quotes">
-					<div>“Failure is success in progress” ― Albert Einstein</div>
-					<br>
-					<div>“If four things are followed - having a great aim, acquiring knowledge, hard work, and
-						perseverance - then anything can be achieved” ― APJ Abdul Kalam</div>
-				</div>
+		<div id="footer">
+			<div class="quotes">
+				<div>“Failure is success in progress” ― Albert Einstein</div>
+				<br>
+				<div>“If four things are followed - having a great aim, acquiring knowledge, hard work, and
+					perseverance - then anything can be achieved” ― APJ Abdul Kalam</div>
 			</div>
+			<div>&copy; 2023 Monowar Bhuyan </div>
+			<div>Designed by <a href="https://www.linkedin.com/in/joud/" target="_blank">Joud Al Mualem</a></div><br>
+		</div>
 
 	</div>
 
