--- a/misc.html
+++ b/misc.html
@@ -114,6 +114,7 @@
 							href="https://www.unb.ca/cic/" target="_blank">link</a>]</li>
 					<li>Tsinghua NetMan Lab, Tsinghua University, China. [<a href="https://netman.aiops.org/"
 							target="_blank">link</a>]</li>
+					<li>Security and Analytics Lab, University of Central Florida, USA. [<a href="https://seal.cs.ucf.edu/">link</a>]</li>
 				</ul>
 			</div>
 
@@ -125,124 +126,10 @@
 							target="_blank">link</a>]</li>
 					<li>UCI ML Repository [<a href="https://archive.ics.uci.edu/ml/index.php" target="_blank">link</a>]
 					</li>
+					<li>Machine learning-based NIDS datasets [<a href="https://staff.itee.uq.edu.au/marius/NIDS_datasets/">link</a>]</li>
+					<li>UNSW Bot-IoT datasets [<a href="https://research.unsw.edu.au/projects/bot-iot-dataset">link</a>]</li>
 				</ul>
 			</div>
-
-			<h3 class="content_separation">Conferences</h3>
-			<br><br>
-
-			<h3 class="content_separation">Data Science, Machine Learning, Optimization and AI</h3>
-			<div class="profile_sections">
-				<ul>
-					<li>International Conference on Principles of Knowledge Representation and Reasoning (KR)</li>
-					<li>Australasian Joint Conference on Artificial Intelligence (AI)</li>
-					<li>International Conference on Machine Learning, Optimization, and Data Science (LOD)</li>
-					<li>International Joint Conference on Neural Networks (IJCNN), IEEE</li>
-					<li>International Symposium Advances in Artificial Intelligence and Applications (AAIA), IEEE</li>
-					<li>SGAI International Conference on Artificial Intelligence, British Computer Society, Springer
-					</li>
-					<li>International Symposium on Applied Machine Intelligence and Informatics (SAMI), IEEE</li>
-					<li>International Conference on Information Fusion (FUSION), IEEE</li>
-					<li>SIAM Conference on Data Mining (SDM)</li>
-					<li>European Symposium on Artificial Neural Networks, Computational Intelligence and Machine
-						Learning
-					</li>
-					<li>Neural Information Processing Systems (NeuroIPS)</li>
-					<li>ACM International Conference on Information and Knowledge Management (CIKM)</li>
-					<li>Conference on Uncertainty in Artificial Intelligence (UAI), Springer</li>
-					<li>European Conference on Artificial Intelligence (ECAI), Springer</li>
-					<li>Pacific-Asia Conference on Knowledge Discovery and Data Mining (PAKDD), Springer</li>
-					<li>International Conference on Artificial Neural Networks (ICANN), Springer</li>
-					<li>Pacific Rim International Conference on Artificial Intelligence (PRICAI), Springer</li>
-					<li>International Conference on Neural Information Processing (ICONIP), Springer</li>
-					<li>International Conference on Tools with Artificial Intelligence (ICTAI), IEEE</li>
-					<li>International Joint Conference on Artificial Intelligence (IJCAI)</li>
-					<li>International Conference on Autonomous Agents and Multi-agents Systems (AAMAS)</li>
-					<li>AAAI Conference on Artificial Intelligence (AAAI)</li>
-					<li>European Conference on Machine Learning (ECML)</li>
-					<li>Asian Conference on Machine Learning (ACML)</li>
-					<li>International Conference on Machine Learning (ICML)</li>
-					<li>International Conference on Artificial Intelligence and Statistics (AISTATS)</li>
-					<li>ACM Workshop on Artificial Intelligence and Security (ACM AISec)</li>
-					<li>IEEE International Conference on Data Mining (IEEE ICDM)</li>
-					<li>IEEE International Conference on Data Engineering (IEEE ICDE)</li>
-					<li>ACM SIGMETRICS</li>
-					<li>IEEE International Conference on Machine Learning and Applications (IEEE ICMLA)</li>
-					<li>ACM/SIGAPP Symposium on Applied Computing (ACM SAC)</li>
-				</ul>
-			</div>
-
-			<h3 class="content_separation">Distributed Computing, Edge, Fog and Cloud Computing</h3>
-			<div class="profile_sections">
-				<ul>
-					<li>International Conference on Parallel Processing (ICPP), ACM</li>
-					<li>IEEE International Symposium on Parallel and Distributed Processing with Applications (IEEE
-						ISPA)
-					</li>
-					<li>IEEE International Conference on Computers, Software and Application (IEEE COMPSAC)</li>
-					<li>International Conference on Distributed Computing and Networking (ICDCN)</li>
-					<li>IEEE/ACM International Symposium on Quality of Service (IEEE/ACM IWQoS)</li>
-					<li>ACM Workshop on Hot Topics on Networks (ACM HotNet)</li>
-					<li>IEEE International Conference on Cloud Computing Technology and Science (IEEE CloudCom)</li>
-					<li>IEEE International Conference on Cloud Engineering (IEEE IC2E)</li>
-					<li>IEEE International Conference on Dependable, Autonomic and Secure Computing (IEEE DASC)</li>
-					<li>Network Traffic Measurement and Analysis Conference (TMA)</li>
-					<li>IEEE International Symposium on Network and Computing Applications (IEEE NCA)</li>
-					<li>ACM/IEEE Symposium on Edge Computing (IEEE SEC)</li>
-					<li>IEEE International Parallel and Distributed Processing Symposium (IEEE IPDPS)</li>
-					<li>IEEE Pacific Rim International Symposium on Dependable Computing (IEEE PRDC)</li>
-					<li>IEEE International Symposium on Cloud and Service Computing (IEEE SC2)</li>
-					<li>IEEE Network Operations and Management Symposium (IEEE NOMS)</li>
-					<li>ACM Symposium on Cloud Computing (ACM SoCC)</li>
-					<li>ACM Symposium on Principles of Distributed Computing (ACM PODC)</li>
-					<li>IEEE/IFIP International Conference on Dependable Systems and Networks (DSN)</li>
-					<li>IEEE International Conference on Cluster Computing (IEEE CLUSTER)</li>
-					<li>USENIX Workshop on Hot Topics in Cloud Computing (USENIX HotCloud)</li>
-					<li>IEEE International Conference on Cloud Computing (IEEE CLOUD)</li>
-					<li>IEEE International Conference on Cloud Networking (IEEE CloudNet)</li>
-					<li>IEEE International Conference on Distributed Computing Systems (IEEE ICDCS)</li>
-					<li>IEEE International Symposium on Reliable Distributed Systems (IEEE SRDS)</li>
-					<li>IEEE International Conference on Autonomic Computing (IEEE ICAC)</li>
-					<li>ACM/SPEC International Conference on Performance Engineering (ACM/SPEC ICPE)</li>
-					<li>IEEE/ACM International Conference on Utility and Cloud Computing (IEEE/ACM UCC)</li>
-				</ul>
-			</div>
-
-			<h3 class="content_separation">Networks and Systems Security</h3>
-			<div class="profile_sections">
-				<ul>
-					<li>IEEE International Symposium on the Modeling, Analysis, and Simulation of Computer and
-						Telecommunication Systems (IEEE MASCOTS)</li>
-					<li>European Conference on Computer Systems (EuroSys)</li>
-					<li>IEEE International Conference on Communications (IEEE ICC)</li>
-					<li>IEEE International Conference on Data Science in Cyberspace (IEEE DSC)</li>
-					<li>International Symposium on Research in Attacks, Intrusions and Defenses (RAID)</li>
-					<li>IEEE Conference on Privacy, Security and Trust (IEEE PST)</li>
-					<li>IEEE Symposium on Security and Privacy (IEEE S&P)</li>
-					<li>USENIX Security Symposium (USENIX SEC)</li>
-					<li>IEEE Conference on Communications and Network Security (IEEE CNS)</li>
-					<li>Network and Distributed System Security Symposium (NDSS)</li>
-					<li>ACM Conference on Data and Application Security and Privacy (ACM CODAPSY)</li>
-					<li>International Conference on COMmunication Systems and NETworkS (COMSNET)</li>
-					<li>ACM Internet Measurement Conference (ACM IMC)</li>
-					<li>International Conference on Emerging Networking Experiments and Technologies (CoNEXT)</li>
-					<li>ACM SIGCOMM</li>
-					<li>International Conference on Information Networking (ICOIN)</li>
-					<li>IEEE Global Communications Conference (IEEE GLOBECOM)</li>
-					<li>IEEE International Conference on Computer Communications (IEEE INFOCOM)</li>
-					<li>European Workshop on Systems Security (EuroSec)</li>
-					<li>ACM Conference on Computer and Communications Security (ACM CCS)</li>
-					<li>International Conference on Availability, Reliability and Security (ARES)</li>
-					<li>IEEE European Symposium on Security and Privacy (IEEE EuroS&P)</li>
-					<li>IEEE Conference on Dependable and Secure Computing (IEEE DSC)</li>
-					<li>ACM ASIA Conference on Computer and Communications Security (ACM ASIACCS)</li>
-					<li>IEEE International Conference on Trust, Security and Privacy in Computing and Communications
-						(IEEE
-						TrustCom)</li>
-					<li>Australasian Conference on Information Security and Privacy (ACISP)</li>
-				</ul>
-			</div>
-
 
 			<h3 class="content_separation">Faculty Development Programmes</h3>
 			<div class="profile_sections">
@@ -312,16 +199,16 @@
 				<li><a href="contact.html">Contact</a></li>
 			</ul>
 		</div>
-			<div id="footer">
-				<div>&copy; 2023 Monowar Bhuyan </div>
-				<div>Designed by <a href="https://www.linkedin.com/in/joud/" target="_blank">Joud Al Mualem</a></div>
-				<div class="quotes">
-					<div>“Failure is success in progress” ― Albert Einstein</div>
-					<br>
-					<div>“If four things are followed - having a great aim, acquiring knowledge, hard work, and
-						perseverance - then anything can be achieved” ― APJ Abdul Kalam</div>
-				</div>
+		<div id="footer">
+			<div class="quotes">
+				<div>“Failure is success in progress” ― Albert Einstein</div>
+				<br>
+				<div>“If four things are followed - having a great aim, acquiring knowledge, hard work, and
+					perseverance - then anything can be achieved” ― APJ Abdul Kalam</div>
 			</div>
+			<div>&copy; 2023 Monowar Bhuyan </div>
+			<div>Designed by <a href="https://www.linkedin.com/in/joud/" target="_blank">Joud Al Mualem</a></div><br>
+		</div>
 
 	</div>
 
