--- a/activities.html
+++ b/activities.html
@@ -246,9 +246,9 @@
 
 			<h3 class="content_separation">Conference TPC Member</h3>
 			<div>
-			AAMAS 2024 <br>
-			and been part of several international conferences since 2011.
-			<br><br><br>
+				AAMAS 2024 <br>
+				and been part of several international conferences since 2011.
+				<br><br><br>
 			</div>
 
 
@@ -280,16 +280,16 @@
 				<li><a href="contact.html">Contact</a></li>
 			</ul>
 		</div>
-			<div id="footer">
-				<div>&copy; 2023 Monowar Bhuyan </div>
-				<div>Designed by <a href="https://www.linkedin.com/in/joud/" target="_blank">Joud Al Mualem</a></div>
-				<div class="quotes">
-					<div>“Failure is success in progress” ― Albert Einstein</div>
-					<br>
-					<div>“If four things are followed - having a great aim, acquiring knowledge, hard work, and
-						perseverance - then anything can be achieved” ― APJ Abdul Kalam</div>
-				</div>
+		<div id="footer">
+			<div class="quotes">
+				<div>“Failure is success in progress” ― Albert Einstein</div>
+				<br>
+				<div>“If four things are followed - having a great aim, acquiring knowledge, hard work, and
+					perseverance - then anything can be achieved” ― APJ Abdul Kalam</div>
 			</div>
+			<div>&copy; 2023 Monowar Bhuyan </div>
+			<div>Designed by <a href="https://www.linkedin.com/in/joud/" target="_blank">Joud Al Mualem</a></div><br>
+		</div>
 
 	</div>
 
