--- a/members.html
+++ b/members.html
@@ -98,7 +98,7 @@
 				<li><a href="openings.html">Openings</a></li>
 				<div class="nav_border"></div>
 				<!-- Please add the external blog link here -->
-				<li><a href="#" target="_blank">Blog</a></li> 
+				<li><a href="#" target="_blank">Blog</a></li>
 				<div class="nav_border"></div>
 				<li><a href="contact.html">Contact</a></li>
 			</ul>
@@ -300,20 +300,20 @@
 				<li><a href="openings.html">Openings</a></li>
 				<div class="nav_border"></div>
 				<!-- Please add the external blog link here -->
-				<li><a href="#" target="_blank">Blog</a></li> 
+				<li><a href="#" target="_blank">Blog</a></li>
 				<div class="nav_border"></div>
 				<li><a href="contact.html">Contact</a></li>
 			</ul>
 		</div>
 		<div id="footer">
-			<div>&copy; 2023 Monowar Bhuyan </div>
-			<div>Designed by <a href="https://www.linkedin.com/in/joud/" target="_blank">Joud Al Mualem</a></div>
 			<div class="quotes">
 				<div>“Failure is success in progress” ― Albert Einstein</div>
 				<br>
 				<div>“If four things are followed - having a great aim, acquiring knowledge, hard work, and
 					perseverance - then anything can be achieved” ― APJ Abdul Kalam</div>
 			</div>
+			<div>&copy; 2023 Monowar Bhuyan </div>
+			<div>Designed by <a href="https://www.linkedin.com/in/joud/" target="_blank">Joud Al Mualem</a></div><br>
 		</div>
 
 	</div>
