--- a/teaching.html
+++ b/teaching.html
@@ -357,16 +357,16 @@
 				<li><a href="contact.html">Contact</a></li>
 			</ul>
 		</div>
-			<div id="footer">
-				<div>&copy; 2023 Monowar Bhuyan </div>
-				<div>Designed by <a href="https://www.linkedin.com/in/joud/" target="_blank">Joud Al Mualem</a></div>
-				<div class="quotes">
-					<div>“Failure is success in progress” ― Albert Einstein</div>
-					<br>
-					<div>“If four things are followed - having a great aim, acquiring knowledge, hard work, and
-						perseverance - then anything can be achieved” ― APJ Abdul Kalam</div>
-				</div>
+		<div id="footer">
+			<div class="quotes">
+				<div>“Failure is success in progress” ― Albert Einstein</div>
+				<br>
+				<div>“If four things are followed - having a great aim, acquiring knowledge, hard work, and
+					perseverance - then anything can be achieved” ― APJ Abdul Kalam</div>
 			</div>
+			<div>&copy; 2023 Monowar Bhuyan </div>
+			<div>Designed by <a href="https://www.linkedin.com/in/joud/" target="_blank">Joud Al Mualem</a></div><br>
+		</div>
 
 	</div>
 
