Member page alignemnt and others are fixed

--- a/contact.html
+++ b/contact.html
@@ -172,7 +172,7 @@
 						</tr>
 						<tr>
 							<td>Email: </td>
-							<td><a href="mailto: monowar@cs.umu.se" target="_top">monowar@cs.umu.se</a></td>
+							<td><a href="mailto: monowar@cs.umu.se" target="_top">monowar[at]cs[dot]umu[dot]se</a></td>
 						</tr>
 						</tr>
 					</table>
