--- a/index.html
+++ b/index.html
@@ -215,25 +215,33 @@
 			<div>We gratefully acknowledge support from the grant agencies below.</div>
 			<div id="funded-by">
 				<div>
-					<a href="https://ec.europa.eu/info/funding-tenders/opportunities/portal/screen/home"
+					<!-- <a href="https://ec.europa.eu/info/funding-tenders/opportunities/portal/screen/home"
 						target="_blank">
 						<img src="pics/horizoneurope.jpg" style="height:130px;border:0">
-					</a>
-					<a href="https://wasp-sweden.org/" target="_blank">
-						<img src="pics/wasp_se.jpeg" style="height:80px;border:0">
-					</a>
-					<a href="https://www.kempe.com/" target="_blank">
-						<img src="pics/kempe.png" style="height:40px;border:0">
-					</a>
+					</a> -->
+					<div><a href="https://www.stint.se/en/" target="_blank">
+							<img src="pics/stint_se.jpeg" style="height:80px;border:0">
+						</a></div>
+					<div><a href="https://wasp-sweden.org/" target="_blank">
+							<img src="pics/wasp_se.jpeg" style="height:80px;border:0">
+						</a></div>
+					<div><a href="https://www.kempe.com/" target="_blank">
+							<img src="pics/kempe.png" style="height:40px;border:0">
+						</a></div>
 				</div>
 				<div>
-					<a href="https://www.stint.se/en/" target="_blank">
-						<img src="pics/stint_se.jpeg" style="height:80px;border:0">
-					</a>
-					<div style="width: 20px;"></div>
-					<a href="https://www.nict.go.jp/en/" target="_blank">
-						<img src="pics/nict_jp.png" style="height:80px;border:0">
-					</a>
+					<!-- <div style="width: 20px;"></div> -->
+					<div><a href="https://www.nict.go.jp/en/" target="_blank">
+							<img src="pics/nict_jp.png" style="height:70px;border:0">
+						</a></div>
+					<div><a href="https://marie-sklodowska-curie-actions.ec.europa.eu/actions/doctoral-networks"
+							target="_blank">
+							<img src="pics/msca-doctoral-network.jpeg" style="height:120px;border:0">
+						</a></div>
+					<div><a href="https://ec.europa.eu/info/funding-tenders/opportunities/portal/screen/home"
+							target="_blank">
+							<img src="pics/eu.jpg" style="height:130px;border:0">
+						</a></div>
 				</div>
 			</div>
 			<br><br><br>
@@ -289,7 +297,8 @@
 						perseverance - then anything can be achieved” ― APJ Abdul Kalam</div>
 				</div>
 				<div>&copy; 2023 Monowar Bhuyan </div>
-				<div>Designed by <a href="https://www.linkedin.com/in/joud/" target="_blank">Joud Al Mualem</a></div><br>
+				<div>Designed by <a href="https://www.linkedin.com/in/joud/" target="_blank">Joud Al Mualem</a></div>
+				<br>
 			</div>
 		</div>
 
