--- a/members.html
+++ b/members.html
@@ -89,8 +89,6 @@
 				<div class="nav_border"></div>
 				<li class="selected"><a href="members.html">Members</a></li>
 				<div class="nav_border"></div>
-				<li><a href="alumni.html">Alumni</a></li>
-				<div class="nav_border"></div>
 				<li><a href="research.html">Research</a></li>
 				<div class="nav_border"></div>
 				<li><a href="publications.html">Publications</a></li>
@@ -99,6 +97,8 @@
 				<div class="nav_border"></div>
 				<!-- Please add the external blog link here -->
 				<li><a href="#" target="_blank">Blog</a></li>
+				<div class="nav_border"></div>
+				<li><a href="alumni.html">Alumni</a></li>
 				<div class="nav_border"></div>
 				<li><a href="contact.html">Contact</a></li>
 			</ul>
@@ -117,16 +117,16 @@
 			<h3 class="content_separation">Current Members</h3>
 			<div class="profile_sections">
 				<h3>Senior Researchers</h3>
-				<table style=“border-spacing: 8px; border-collapse: separate;”>
+				<table style="border-spacing:8px; border-collapse: separate;">
 					<col width="300">
-					<col width=300">
+					<col width="300">
 					<col width="300">
 					<col width="300">
 
 					<tr>
 						<td><a href="#" onclick="return false;">
-								<img src="pics/kshirasagar.jpg" style="width:160px;height:160px;border:0;float: left;">
-								<center>Kshirasagar Sahoo <br>
+								<center><img src="pics/kshirasagar.jpg" style="width:160px;height:160px;border:0;"><br>
+									Kshirasagar Sahoo <br>
 							</a>
 							<p style="font-size:100%">Post-doc<br>
 								Urban anomaly detection, SDN, Systems security<br> [2022 - ongoing]</center>
@@ -134,8 +134,8 @@
 
 
 						<td><a href="#" onclick="return false;">
-								<img src="pics/new1.png" style="width:160px;height:160px;border:0:float: left;">
-								<center>To be recruited <br>
+								<center><img src="pics/new1.png" style="width:160px;height:160px;border:0;"><br>
+									To be recruited <br>
 							</a>
 							<p style="font-size:100%">Post-doc<br>
 								Federated learning, Adversarial learning <br> [2023 - yet to start]</center>
@@ -154,8 +154,8 @@
 					<tr>
 
 						<td><a href="#" onclick="return false;">
-								<img src="pics/soura.png" style="width:160px;height:160px;border:0:float: left;">
-								<center>Sourasekhar Banerjee
+								<center><img src="pics/soura.png" style="width:160px;height:160px;border:0;"><br>
+									Sourasekhar Banerjee
 							</a>
 							<p style="font-size:100%">Ph.D. Candidate<br>
 								Federated learning, Optimization, Complex data analysis<br>
@@ -163,8 +163,8 @@
 						</td>
 
 						<td><a href="https://www.umu.se/en/staff/javad-forough/" target="_blank">
-								<img src="pics/javad.jpg" style="width:160px;height:160px;border:0:float: left;">
-								<center>Javad Forough
+								<center><img src="pics/javad.jpg" style="width:160px;height:160px;border:0;"><br>
+									Javad Forough
 							</a>
 							<p style="font-size:100%">Ph.D. Candidate<br>
 								Anomaly detection, Edge-clouds<br>
@@ -174,8 +174,8 @@
 						</td>
 
 						<td><a href="https://www.umu.se/en/staff/sabine-houy/" target="_blank">
-								<img src="pics/new1.png" style="width:160px;height:160px;border:0:float: left;">
-								<center>Sabine Houy
+							<center><img src="pics/new1.png" style="width:160px;height:160px;border:0;"><br>
+								Sabine Houy
 							</a>
 							<p style="font-size:100%">Ph.D. Candidate<br>
 								Andriod vulnerabilities, Fuzzing<br>
@@ -184,8 +184,8 @@
 						</td>
 
 						<td><a href="#" onclick="return false;">
-								<img src="pics/anindya.png" style="width:160px;height:160px;border:0:float: left;">
-								<center>Anindya Sundar Das
+							<center><img src="pics/anindya.png" style="width:160px;height:160px;border:0;"><br>
+								Anindya Sundar Das
 							</a>
 							<p style="font-size:100%">Ph.D. Candidate<br>
 								Anomaly detection, Secure machine learning, Complex data<br>
@@ -206,8 +206,8 @@
 					<tr style="height:300px">
 
 						<td><a href="#" onclick="return false;">
-								<img src="pics/obaidullah.jpg" style="width:160px;height:160px;border:0:float: left;">
-								<center>Obaidullah Zaland
+							<center><img src="pics/obaidullah.jpg" style="width:160px;height:160px;border:0;"><br>
+								Obaidullah Zaland
 							</a>
 							<p style="font-size:100%">Ph.D. Candidate<br>
 								Federated learning, Cloud robotics, Robotics manipulation<br>
@@ -215,8 +215,8 @@
 						</td>
 
 						<td><a href="#" onclick="return false;">
-								<img src="pics/new1.png" style="width:160px;height:160px;border:0:float: left;">
-								<center>Pim Kerkhoven
+							<center><img src="pics/new1.png" style="width:160px;height:160px;border:0;"><br>
+								Pim Kerkhoven
 							</a>
 							<p style="font-size:100%">Ph.D. Candidate<br>
 								Responsible ML<br>
@@ -226,8 +226,8 @@
 						</td>
 
 						<td><a href="#" onclick="return false;">
-								<img src="pics/new1.png" style="width:160px;height:160px;border:0:float: left;">
-								<center>Zhou Zhou
+							<center><img src="pics/new1.png" style="width:160px;height:160px;border:0;"><br>
+								Zhou Zhou
 							</a>
 							<p style="font-size:100%">Ph.D. Candidate<br>
 								Machine learning, Serverless edge intelligence<br>
@@ -235,8 +235,8 @@
 						</td>
 
 						<td><a href="#" onclick="return false;">
-								<img src="pics/new1.png" style="width:160px;height:160px;border:0:float: left;">
-								<center>Deepanjan Mitra
+							<center><img src="pics/new1.png" style="width:160px;height:160px;border:0;"><br>
+								Deepanjan Mitra
 							</a>
 							<p style="font-size:100%">Ph.D. Candidate<br>
 								Serverless computing, Systems security<br>
@@ -291,8 +291,6 @@
 				<div class="nav_border"></div>
 				<li class="selected"><a href="members.html">Members</a></li>
 				<div class="nav_border"></div>
-				<li><a href="alumni.html">Alumni</a></li>
-				<div class="nav_border"></div>
 				<li><a href="research.html">Research</a></li>
 				<div class="nav_border"></div>
 				<li><a href="publications.html">Publications</a></li>
@@ -301,6 +299,8 @@
 				<div class="nav_border"></div>
 				<!-- Please add the external blog link here -->
 				<li><a href="#" target="_blank">Blog</a></li>
+				<div class="nav_border"></div>
+				<li><a href="alumni.html">Alumni</a></li>
 				<div class="nav_border"></div>
 				<li><a href="contact.html">Contact</a></li>
 			</ul>
