--- a/new_students.html
+++ b/new_students.html
@@ -94,6 +94,8 @@
         <div class="nav_border"></div>
         <li><a href="openings.html">Openings</a></li>
         <div class="nav_border"></div>
+				<li><a href="alumni.html">Alumni</a></li>
+        <div class="nav_border"></div>
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </div>
@@ -240,6 +242,8 @@
         <li><a href="publications.html">Publications</a></li>
         <div class="nav_border"></div>
         <li><a href="openings.html">Openings</a></li>
+        <div class="nav_border"></div>
+				<li><a href="alumni.html">Alumni</a></li>
         <div class="nav_border"></div>
         <li><a href="contact.html">Contact</a></li>
       </ul>
