--- a/misc.html
+++ b/misc.html
@@ -114,7 +114,7 @@
 							href="https://www.unb.ca/cic/" target="_blank">link</a>]</li>
 					<li>Tsinghua NetMan Lab, Tsinghua University, China. [<a href="https://netman.aiops.org/"
 							target="_blank">link</a>]</li>
-					<li>Security and Analytics Lab, University of Central Florida, USA. [<a href="https://seal.cs.ucf.edu/">link</a>]</li>
+					<li>Security and Analytics Lab, University of Central Florida, USA. [<a href="https://seal.cs.ucf.edu/" target="_blank">link</a>]</li>
 				</ul>
 			</div>
 
@@ -126,8 +126,8 @@
 							target="_blank">link</a>]</li>
 					<li>UCI ML Repository [<a href="https://archive.ics.uci.edu/ml/index.php" target="_blank">link</a>]
 					</li>
-					<li>Machine learning-based NIDS datasets [<a href="https://staff.itee.uq.edu.au/marius/NIDS_datasets/">link</a>]</li>
-					<li>UNSW Bot-IoT datasets [<a href="https://research.unsw.edu.au/projects/bot-iot-dataset">link</a>]</li>
+					<li>Machine learning-based NIDS datasets [<a href="https://staff.itee.uq.edu.au/marius/NIDS_datasets/" target="_blank">link</a>]</li>
+					<li>UNSW Bot-IoT datasets [<a href="https://research.unsw.edu.au/projects/bot-iot-dataset" target="_blank">link</a>]</li>
 				</ul>
 			</div>
 
