Introduced second round of changes

--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-<!doctype html public "-//w3c//dtd html 4.0 transitional//en">
-
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -8,6 +7,7 @@
 		display: none;
 	}
 </style>
+
 <!-- Mirrored from web.stanford.edu/~kozyraki/ by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 11 Dec 2019 05:06:09 GMT -->
 
 <head>
@@ -63,8 +63,8 @@
 				<li><a href="https://www.umu.se/en/" target="_blank">Umeå University</a></li>
 				<li><a href="https://www.umu.se/en/department-of-computing-science/" target="_blank">Dept. of Computing
 						Science</a></li>
-				<br>
-				<li>Email: monowar (at) cs.umu.se</li>
+				<!-- <br>
+				<li>Email: monowar (at) cs.umu.se</li> -->
 				<br>
 				<a href="https://scholar.google.co.in/citations?user=0oWAA6MAAAAJ&hl=en&oi=ao" target="_blank">
 					<img src="pics/sg.png" style="width:32px;height:32px;border:0">
@@ -158,6 +158,11 @@
 
 			<div id="recent_news">
 				<ul>
+					<li>11/2023 - Currenly looking for a PhD student in DDoS attacks and defences in cloud-edge
+						continuum at Umeå University, Sweden in collaboration Linkoping University and KTH, funded by
+						WASP (Advt. will be out soon, you may reach to me via Email for any queries).</li>
+					<li>11/2023 - PC Chair - <a href="https://ieeeaitest.com/" target="_blank"> IEEE AITest 2024 </a>
+						July 15-18, Shanghai, China (please consider to submit your unpublished work).</li>
 					<li>10/2023 - Currently looking for a postdoc in secure federated learning </a> at Umeå University,
 						Sweden (Advt. will be out soon, you may reach to me via Email for any queries).</li>
 
