--- a/profile.html
+++ b/profile.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
-<html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
@@ -62,8 +61,8 @@
 				<li><a href="https://www.umu.se/en/" target="_blank">Umeå University</a></li>
 				<li><a href="https://www.umu.se/en/department-of-computing-science/" target="_blank">Dept. of Computing
 						Science</a></li>
-				<br>
-				<li>Email: monowar (at) cs.umu.se</li>
+				<!-- <br>
+				<li>Email: monowar (at) cs.umu.se</li> -->
 				<br>
 				<a href="https://scholar.google.co.in/citations?user=0oWAA6MAAAAJ&hl=en&oi=ao" target="_blank">
 					<img src="pics/sg.png" style="width:32px;height:32px;border:0">
@@ -247,15 +246,6 @@
 						2009).
 					</li>
 				</ul>
-			</div>
-
-			<h3 class="content_separation">Conference and Workshop Participation</h3>
-
-			<div id="profile-conference-section">
-				<br>
-				.......will be updated soon......
-				<br>
-				<br>
 			</div>
 
 			<h3 class="content_separation">Membership</h3>
