--- a/contact.html
+++ b/contact.html
@@ -63,8 +63,8 @@
 				<li><a href="https://www.umu.se/en/" target="_blank">Umeå University</a></li>
 				<li><a href="https://www.umu.se/en/department-of-computing-science/" target="_blank">Dept. of Computing
 						Science</a></li>
-				<br>
-				<li>Email: monowar (at) cs.umu.se</li>
+				<!-- <br>
+				<li>Email: monowar (at) cs.umu.se</li> -->
 				<br>
 				<a href="https://scholar.google.co.in/citations?user=0oWAA6MAAAAJ&hl=en&oi=ao" target="_blank">
 					<img src="pics/sg.png" style="width:32px;height:32px;border:0">
@@ -172,7 +172,8 @@
 						</tr>
 						<tr>
 							<td>Email: </td>
-							<td><a href="mailto: monowar@cs.umu.se" target="_top">monowar[at]cs[dot]umu[dot]se</a></td>
+							<!-- <td><a href="mailto: monowar@cs.umu.se" target="_top">monowar[at]cs[dot]umu[dot]se</a></td> -->
+							<td><img style="width: 180px; margin-left: -3px;" src="pics/monowar_email.png"/></td>
 						</tr>
 						</tr>
 					</table>
