--- a/teaching.html
+++ b/teaching.html
@@ -64,8 +64,8 @@
 				<li><a href="https://www.umu.se/en/" target="_blank">Umeå University</a></li>
 				<li><a href="https://www.umu.se/en/department-of-computing-science/" target="_blank">Dept. of Computing
 						Science</a></li>
-				<br>
-				<li>Email: monowar (at) cs.umu.se</li>
+				<!-- <br>
+				<li>Email: monowar (at) cs.umu.se</li> -->
 				<br>
 				<a href="https://scholar.google.co.in/citations?user=0oWAA6MAAAAJ&hl=en&oi=ao" target="_blank">
 					<img src="pics/sg.png" style="width:32px;height:32px;border:0">
