Fix member page image alignments

--- a/members_old.html
+++ b/members_old.html
@@ -116,120 +116,136 @@
 
 			<h3 class="content_separation">Current Members</h3>
 			<div class="profile_sections">
+				<h3>Senior Researchers</h3>
+				<table style="border-spacing:8px; border-collapse: separate; position: relative;">
+					<col width="300">
+					<col width="300">
+					<col width="300">
+					<col width="300">
 
-				<h3 class="member-h3">Senior Researchers</h3>
-				<div class="member-container">
-					<div class="member-column member-person">
-						<a href="#" onclick="return false;">
-							<img src="pics/kshirasagar.jpg" alt="Kshirasagar Sahoo">
-							<br>
-							Kshirasagar Sahoo
-						</a>
-						<p class="member-p">Post-doc<br>Urban anomaly detection, SDN, Systems security<br>[2022 -
-							ongoing]</p>
-					</div>
+					<tr>
+						<td><a href="#" onclick="return false;">
+								<center><img src="pics/kshirasagar.jpg" style="width:160px;height:160px;border:0;"><br>
+									Kshirasagar Sahoo <br>
+							</a>
+							<p style="font-size:100%">Post-doc<br>
+								Urban anomaly detection, SDN, Systems security<br> [2022 - ongoing]</center>
+						</td>
 
-					<div class="member-column member-person">
-						<a href="#" onclick="return false;">
-							<img src="pics/new1.png" alt="To be recruited">
-							<br>
-							To be recruited
-						</a>
-						<p class="member-p">Post-doc<br>Federated learning, Adversarial learning<br>[2023 - yet to
-							start]</p>
-					</div>
-					<div class="member-column member-person">
-					</div>
-					<div class="member-column member-person">
-					</div>
-				</div>
 
-				<h3 class="member-h3">PhD Students</h3>
-				<div class="member-container">
-					<div class="member-column member-person">
-						<a href="#" onclick="return false;">
-							<img src="pics/soura.png" alt="Sourasekhar Banerjee">
-							<br>
-							Sourasekhar Banerjee
-						</a>
-						<p class="member-p">Ph.D. Candidate<br>Federated learning, Optimization, Complex data
-							analysis<br>[Main supervisor, 2020-ongoing]</p>
-					</div>
+						<td><a href="#" onclick="return false;">
+								<center><img src="pics/new1.png" style="width:160px;height:160px;border:0;"><br>
+									To be recruited <br>
+							</a>
+							<p style="font-size:100%">Post-doc<br>
+								Federated learning, Adversarial learning <br> [2023 - yet to start]</center>
+						</td>
+						<td> </td>
+						<td> </td>
+					</tr>
 
-					<div class="member-column member-person">
-						<a href="https://www.umu.se/en/staff/javad-forough/" target="_blank">
-							<img src="pics/javad.jpg" alt="Javad Forough">
-							<br>
-							Javad Forough
-						</a>
-						<p class="member-p">Ph.D. Candidate<br>Anomaly detection, Edge-clouds<br>[Co-supervisor with <a
-								href="https://www8.cs.umu.se/~elmroth/" target="_blank">Prof. Erik Elmroth</a>,
-							2020-ongoing]</p>
-					</div>
+					<tr>
+						<td>
+							<h3>PhD Students</h3>
+						</td>
+					</tr>
 
-					<div class="member-column member-person">
-						<a href="https://www.umu.se/en/staff/sabine-houy/" target="_blank">
-							<img src="pics/new1.png" alt="Sabine Houy">
-							<br>
-							Sabine Houy
-						</a>
-						<p class="member-p">Ph.D. Candidate<br>Andriod vulnerabilities, Fuzzing<br>[Co-supervisor with
-							<a href="https://www.umu.se/en/staff/alexandre-bartel/" target="_blank">Prof. Alexandre
-								Bartel</a>, 2021-ongoing]
-						</p>
-					</div>
 
-					<div class="member-column member-person">
-						<a href="#" onclick="return false;">
-							<img src="pics/anindya.png" alt="Anindya Sundar Das">
-							<br>
-							Anindya Sundar Das
-						</a>
-						<p class="member-p">Ph.D. Candidate<br>Anomaly detection, Secure machine learning, Complex
-							data<br>[Main supervisor, 2022 - ongoing]</p>
-					</div>
+					<tr>
 
-					<div class="member-column member-person">
-						<a href="#" onclick="return false;">
-							<img src="pics/obaidullah.jpg" alt="Obaidullah Zaland">
-							<br>
-							Obaidullah Zaland
-						</a>
-						<p class="member-p">Ph.D. Candidate<br>Federated learning, Cloud robotics, Robotics
-							manipulation<br>[Main supervisor, 2023 - ongoing]</p>
-					</div>
+						<td><a href="#" onclick="return false;">
+								<center><img src="pics/soura.png" style="width:160px;height:160px;border:0;"><br>
+									Sourasekhar Banerjee
+							</a>
+							<p style="font-size:100%">Ph.D. Candidate<br>
+								Federated learning, Optimization, Complex data analysis<br>
+								[Main supervisor, 2020-ongoing]<br></center>
+						</td>
 
-					<div class="member-column member-person">
-						<a href="#" onclick="return false;">
-							<img src="pics/new1.png" alt="Pim Kerkhoven">
-							<br>
-							Pim Kerkhoven
-						</a>
-						<p class="member-p">Ph.D. Candidate<br>Responsible ML<br>[Main supervisor & <a
-								href="https://www.umu.se/en/staff/virginia-dignum/" target="_blank">Prof. Virginia
-								Dignum</a> as Co-supervisor, 2023 - ongoing]</p>
-					</div>
+						<td><a href="https://www.umu.se/en/staff/javad-forough/" target="_blank">
+								<center><img src="pics/javad.jpg" style="width:160px;height:160px;border:0;"><br>
+									Javad Forough
+							</a>
+							<p style="font-size:100%">Ph.D. Candidate<br>
+								Anomaly detection, Edge-clouds<br>
+								[Co-supervisor with <a href="https://www8.cs.umu.se/~elmroth/" target="_blank">Prof.
+									Erik
+									Elmroth</a>, 2020-ongoing]<br></center>
+						</td>
 
-					<div class="member-column member-person">
-						<a href="#" onclick="return false;">
-							<img src="pics/new1.png" alt="Zhou Zhou">
-							<br>
-							Zhou Zhou
-						</a>
-						<p class="member-p">Ph.D. Candidate<br>Machine learning, Serverless edge intelligence<br>[Main
-							supervisor, 2023 - yet to start]</p>
-					</div>
+						<td><a href="https://www.umu.se/en/staff/sabine-houy/" target="_blank">
+							<center><img src="pics/new1.png" style="width:160px;height:160px;border:0;"><br>
+								Sabine Houy
+							</a>
+							<p style="font-size:100%">Ph.D. Candidate<br>
+								Andriod vulnerabilities, Fuzzing<br>
+								[Co-supervisor with <a href="https://www.umu.se/en/staff/alexandre-bartel/"
+									target="_blank">Prof. Alexandre Bartel</a>, 2021-ongoing]<br></center>
+						</td>
 
-					<div class="member-column member-person">
-						<a href="#" onclick="return false;">
-							<img src="pics/new1.png" alt="Deepanjan Mitra">
-							<br>
-							Deepanjan Mitra
-						</a>
-						<p class="member-p">Ph.D. Candidate<br>Serverless computing, Systems security<br>[Co-supervisor,
-							enrolled in University of Calcutta, India, 2023 - ongoing]</p>
-					</div>
-				</div>
+						<td><a href="#" onclick="return false;">
+							<center><img src="pics/anindya.png" style="width:160px;height:160px;border:0;"><br>
+								Anindya Sundar Das
+							</a>
+							<p style="font-size:100%">Ph.D. Candidate<br>
+								Anomaly detection, Secure machine learning, Complex data<br>
+								[Main supervisor, 2022 - ongoing]<br></center>
+						</td>
+
+						<!--
+					<td><a href="https://www.linkedin.com/in/minalspatil/?originalSubdomain=uk" target="_blank">
+				 	<img src="pics/minal.jpg" style="width:160px;height:160px;border:0:float: left;">
+				 		<center>Minal Suresh Patil
+				 	</a>
+				 	<p style="font-size:100%">Ph.D. Candidate<br>
+				 	Explainable AI, Machine Learning <br>
+				 [Co-supervisor with <a href="https://www.umu.se/en/staff/kary-framling/" target="_blank">Prof. Kary Främling</a>, 2020-ongoing]<br></center></td>
+-->
+					</tr>
+
+					<tr style="height:300px">
+
+						<td><a href="#" onclick="return false;">
+							<center><img src="pics/obaidullah.jpg" style="width:160px;height:160px;border:0;"><br>
+								Obaidullah Zaland
+							</a>
+							<p style="font-size:100%">Ph.D. Candidate<br>
+								Federated learning, Cloud robotics, Robotics manipulation<br>
+								[Main supervisor, 2023 - ongoing]<br></center>
+						</td>
+
+						<td><a href="#" onclick="return false;">
+							<center><img src="pics/new1.png" style="width:160px;height:160px;border:0;"><br>
+								Pim Kerkhoven
+							</a>
+							<p style="font-size:100%">Ph.D. Candidate<br>
+								Responsible ML<br>
+								[Main supervisor & <a href="https://www.umu.se/en/staff/virginia-dignum/"
+									target="_blank">Prof. Virginia Dignum</a> as Co-supervisor, 2023 - ongoing]<br>
+								</center>
+						</td>
+
+						<td><a href="#" onclick="return false;">
+							<center><img src="pics/new1.png" style="width:160px;height:160px;border:0;"><br>
+								Zhou Zhou
+							</a>
+							<p style="font-size:100%">Ph.D. Candidate<br>
+								Machine learning, Serverless edge intelligence<br>
+								[Main supervisor,</a> 2023 - yet to start]<br></center>
+						</td>
+
+						<td><a href="#" onclick="return false;">
+							<center><img src="pics/new1.png" style="width:160px;height:160px;border:0;"><br>
+								Deepanjan Mitra
+							</a>
+							<p style="font-size:100%">Ph.D. Candidate<br>
+								Serverless computing, Systems security<br>
+								[Co-supervisor, enrolled in University of Calcutta, India, </a> 2023 - ongoing]<br>
+								</center>
+						</td>
+
+					</tr>
+				</table>
 
 				<h3>Ongoing MS thesis</h3>
 				<br>
